--- a/dopres/index.html
+++ b/dopres/index.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <title>DOPRES</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
     <link href="img/about-img.jpg" rel="icon">
@@ -29,7 +27,7 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
+    <!--   Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -642,7 +640,7 @@
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
 
-    <!-- Template Javascript -->
+    <!--   Javascript -->
     <script src="js/main.js"></script>
 
 
@@ -663,7 +661,7 @@
     <!-- Contact Form JavaScript File -->
     <script src="contactform/contactform.js"></script>
 
-    <!-- Template Main Javascript File -->
+    <!--   Main Javascript File -->
     <script src="js/main.js"></script>
 </body>
 
